<resources>
    <string name="app_name">Future WallPapers</string>
    <string name="title_wallpapers">Wallpapers</string>
    <string name="title_collections">Collections</string>
    <string name="title_favorites">Favorites</string>
    <string name="small_image_description">small image description</string>
    <string name="ticked_icon">Ticked Icon</string>
    <string name="unticked_icon">unticked icon</string>
    <string name="apply">apply</string>
    <string name="info">info</string>
    <string name="no_favorites">No Favorites</string>
    <string name="pubg_mobile">Pubg Mobile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="apply_wallpaper">Apply WallPaper</string>
    <string name="set_lock_screen">Set Lock Screen</string>
    <string name="set_home_screen">Set Home Screen</string>
    <string name="both_home_and_lockscreen">Both Home and Lockscreen</string>
</resources>