<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fullscreen.FullScreenImage">
    <ImageView

        android:id="@+id/fullscreenimage"
android:scaleType="fitXY"


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/title_favorites" />

 <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_baseline_file_upload"
            android:layout_height="wrap_content"
            android:id="@+id/apply_wallpaper"
     />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"

            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/apply"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
 <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_baseline_info_24"
            android:layout_height="wrap_content"
            android:id="@+id/show_info"
     />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"

            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/info"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:src="@drawable/ic_favorite_ticked"
        android:id="@+id/favorite_ticked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/ticked_icon" />
    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_unticked"
        android:id="@+id/favorite_unticked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/unticked_icon" />
    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:textColor="@android:color/white"
        android:text="@string/title_favorites"
        android:layout_marginBottom="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>