<?xml version="1.0" encoding="utf-8"?>



        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fullscreen.FullScreenImage">


          <!--  <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                style="@style/AppTheme.ActionBar.Transparent"
                android:theme="@style/toolbar_theme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />-->


        <ImageView

            android:id="@+id/fullscreenimage"
            android:scaleType="fitXY"


            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_favorites" />


            <View
                android:background="@drawable/gradient"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

    <View

        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/gradient_flipped"
        app:layout_constraintTop_toTopOf="@id/fullscreenimage"
        tools:layout_editor_absoluteX="-48dp" />

    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fullscreenimage"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:id="@+id/back_button"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/fullscreenimage"
        android:layout_marginTop="16dp"
        android:id="@+id/wall_title"
        android:textColor="@color/black"
        tools:text="Minimal UI"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        android:layout_marginStart="16dp"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_baseline_file_upload"
            android:layout_height="wrap_content"
            android:id="@+id/apply_wallpaper"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:id="@+id/apply_text"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/apply"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:src="@drawable/ic_baseline_info_24"
            android:layout_height="wrap_content"
            android:id="@+id/show_info"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:id="@+id/info_text"

            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:text="@string/info"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:src="@drawable/ic_favorite_ticked"
        android:id="@+id/favorite_ticked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/ticked_icon" />
    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_favorite_unticked"
        android:id="@+id/favorite_unticked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/unticked_icon" />
    <TextView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:id="@+id/favorites_text"
        android:textColor="@android:color/white"
        android:text="@string/title_favorites"
        android:layout_marginBottom="8dp"/>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


