<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wallpapers">

    <fragment
        android:id="@+id/navigation_wallpapers"
        android:name="com.keapps.futurewallpapers.ui.wallpapers.WallpapersFragment"
        android:label="@string/title_wallpapers"
        tools:layout="@layout/fragment_wallpapers" >
        <action
            android:id="@+id/action_navigation_wallpapers_to_fullscreenFragment"
            app:destination="@id/fullscreenFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_enter_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_enter_anim"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_collections"
        android:name="com.keapps.futurewallpapers.ui.collections.CollectionsFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections" >
        <action
            android:id="@+id/action_navigation_collections_to_singleCollection"
            app:destination="@id/singleCollection"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@animator/nav_default_enter_anim"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.keapps.futurewallpapers.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_navigation_favorites_to_fullscreenFragment"
            app:destination="@id/fullscreenFragment"
            app:popUpTo="@id/fullscreenFragment"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
    </fragment>
    <activity
        android:id="@+id/fullScreenImage"
        android:name="com.keapps.futurewallpapers.ui.fullscreen.FullScreenImage"
        android:label="activity_full_screen_image"
        tools:layout="@layout/activity_full_screen_image" >
        <argument
            android:name="imageId"
            app:argType="integer" />
    </activity>
    <dialog
        android:id="@+id/itemListDialogFragment"
        android:name="com.keapps.futurewallpapers.ui.dialog.ItemListDialogFragment"
        android:label="fragment_item_list_dialog_list_dialog"
        tools:layout="@layout/fragment_item_list_dialog" />
    <fragment
        android:id="@+id/fullscreenFragment"
        android:name="com.keapps.futurewallpapers.ui.fullscreen.FullscreenFragment"
        android:label="fragment_fullscreen"
        tools:layout="@layout/fragment_fullscreen" >
        <action
            android:id="@+id/action_fullscreenFragment_to_itemListDialogFragment"
            app:destination="@id/itemListDialogFragment" />
        <action
            android:id="@+id/action_fullscreenFragment_to_navigation_wallpapers"
            app:destination="@id/navigation_wallpapers" />
        <action
            android:id="@+id/action_fullscreenFragment_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
        <argument
            android:name="wallpaperId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="source"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_fullscreenFragment_to_singleCollection"
            app:destination="@id/singleCollection" />
    </fragment>
    <fragment
        android:id="@+id/singleCollection"
        android:name="com.keapps.futurewallpapers.ui.collections.SingleCollection"
        android:label="SingleCollection" >
        <action
            android:id="@+id/action_singleCollection_to_fullscreenFragment"
            app:destination="@id/fullscreenFragment" />
        <argument
            android:name="singleCollection"
            app:argType="com.keapps.futurewallpapers.data.relationships.CategoryinWall"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>